--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,14 @@ services:
       retries: 5
 
   web:
-    image: vittoriopippi/animeunity-downloader:latest
+    build: .
     container_name: anime_web
     command: >
       sh -c "python manage.py migrate && 
              python manage.py createsuperuser --noinput || true && 
              python manage.py runserver 0.0.0.0:8000"
     volumes:
+      - .:/app
       - media_volume:/app/media
     ports:
       - "8083:8000"
@@ -56,10 +57,11 @@ services:
     restart: always
 
   worker:
-    image: vittoriopippi/animeunity-downloader:latest
+    build: .
     container_name: anime_worker
     command: celery -A config worker --loglevel=info --concurrency=4
     volumes:
+      - .:/app
       - media_volume:/app/media
     environment:
       - REDIS_HOST=redis
