feat: Implement anime download management system with search, queue, and Celery task integration.

--- a/docker-compose.omv.yml
+++ b/docker-compose.omv.yml
@@ -76,5 +76,22 @@ services:
         condition: service_healthy
     restart: always
 
+  beat:
+    image: vittoriopippi/animeunity-downloader:latest
+    container_name: anime_beat
+    command: celery -A config beat --loglevel=info
+    environment:
+      - REDIS_HOST=redis
+      - DB_HOST=db
+      - DB_NAME=anime_db
+      - DB_USER=anime_user
+      - DB_PASSWORD=anime_pass
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: always
+
 volumes:
   postgres_data:
